--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,7 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="description_string">Description</string>
+    <string name="workout_name_string">Workout Name</string>
+    <string name="save_workout_string">Save workout</string>
 </resources>
